FlightCrew v0.7.1 ADD_DATE
    - fixed an issue with missing XHTML files causing the GUI to show a dialog about an 
    std::exception and the CLI to report that the epub itself was not present (issue #8)
    - fixed an issue that was causing empty error messages for incorrect uses of XML encodings
    (issue #5)    
    - fixed an issue with anchor links to the current file (links with fragments only)
    incorrectly throwing errors in the reachability analysis (issue #3)

FlightCrew v0.7.0 2010.10.01.
    - initial release